Add fix in Casting.cpp for SR-6032

Private classes doesn't add extra stuff when passed to String(describing:)